# aoc2023

./: .gitignore  Cargo.toml  Makefile
benches/: bench.rs
input/test/: 01.txt
src/: lib.rs  main.rs
src/days/: day01.rs  day05.rs  day09.rs  day1.rs  day2.rs  day20.rs  day21.rs  day25.rs  day3.rs  day4.rs  day6.rs  mod.rs
