[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arrayvec = "0.7.4"
bstr = "1.8.0"
fxhash = "0.2.1"
itertools = "0.12.0"
nom = "7.1.3"
num = "0.4.1"
thiserror = "1.0.50"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
